# fop

./: .gitignore  fop.cabal
10-Arrows-and-Computation/: ArrowTrans.hs  Arrows.hs  Hom.hs
12-Fun-with-Phantom-Types/: Term.hs  Type.hs
chapter10/: Arrows.hs
