Name:                fop
Version:             0.0.0
Synopsis:            The fun of programming
Homepage:            http://github.com/maoe/fop
License:             BSD3
License-file:        LICENSE
Author:              Mitsutoshi Aoe
Maintainer:          maoe@foldr.in
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Hs-source-dirs:    10-Arrows-and-Computation,
                     12-Fun-with-Phantom-Types
  -- Modules exported by the library.
  Exposed-modules:   Arrows, Hom, ArrowTrans,
                     Term, Type

  Build-depends:     base >= 4,
                     pretty
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
